# optiga-nbt-rpi-port

./: .gitignore  CMakeLists.txt  README.md  REUSE.toml
data/: optiga-nbt-rpi-port-config.cmake.in
i2c-cyhal/include/infineon/: i2c-cyhal.h
i2c-rpi/include/infineon/: i2c-cyhal.h  i2c-rpi.h
i2c-rpi/src/: i2c-cyhal.c  i2c-cyhal.h  i2c-rpi.c  i2c-rpi.h
logger-cyhal-rpi/src/: logger-cyhal-rtos.c  logger-cyhal-rtos.h
logger-cyhal-rtos/include/infineon/: logger-cyhal-rtos.h
logger-printf/include/infineon/: logger-printf.h
logger-printf/src/: logger-printf.c  logger-printf.h
timer-freertos/src/: timer-freertos.c
timer-rpi/src/: timer-cyhal.c  timer-rpi.c
